--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "stx-defi-tests",
   "version": "1.0.0",
@@ -13,12 +12,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@hirosystems/clarinet-sdk": "^2.3.2",
-    "@stacks/transactions": "^6.12.0",
+    "@hirosystems/clarinet-sdk": "^3.0.1",
+    "@stacks/transactions": "^7.0.6",
+    "@types/node": "^22.15.17",
     "chokidar-cli": "^3.0.0",
     "typescript": "^5.3.3",
-    "vite": "^5.1.4",
-    "vitest": "^1.3.1",
-    "vitest-environment-clarinet": "^2.0.0"
+    "vite": "^6.3.5",
+    "vitest": "^3.1.3",
+    "vitest-environment-clarinet": "^2.3.0"
   }
 }
